--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,8 +1,20 @@
 <html>
 <head>
-<title>Hello</title>
+<title>Flight System</title>
 </head>
 <body>
-<h1>Hello!</h1>
+<h1>Flight System Directory</h1>
+<ul>
+<li>
+Insertion
+<ul>
+<li><a href="/insert/airline.html">Airline</a></li>
+<li><a href="/insert/planeModel.html">Plane Model</a></li>
+</ul>
+</li>
+<li>
+Queries
+</li>
+</ul>
 </body>
 </html>
