Add Flight form

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,6 +10,7 @@ Insertion
 <ul>
 <li><a href="/insert/airline.html">Airline</a></li>
 <li><a href="/insert/planeModel.html">Plane Model</a></li>
+<li><a href="/servlet/InsertFlightForm">Flight</a></li>
 </ul>
 </li>
 <li>
