Add Status form

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@ Insertion
 <li><a href="/insert/airline.html">Airline</a></li>
 <li><a href="/insert/planeModel.html">Plane Model</a></li>
 <li><a href="/servlet/InsertFlightForm">Flight</a></li>
+<li><a href="/insert/addStatus.html">Status</a></li>
 </ul>
 </li>
 <li>
