Add Passenger Form (Almost done)

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,6 +12,7 @@ Insertion
 <li><a href="/insert/planeModel.html">Plane Model</a></li>
 <li><a href="/servlet/InsertFlightForm">Flight</a></li>
 <li><a href="/insert/addStatus.html">Status</a></li>
+<li><a href="/insert/addPassenger.html">Passenger</a></li>
 </ul>
 </li>
 <li>
