--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,10 +13,19 @@ Insertion
 <li><a href="/servlet/InsertFlightForm">Flight</a></li>
 <li><a href="/insert/addStatus.html">Status</a></li>
 <li><a href="/insert/addPassenger.html">Passenger</a></li>
+<li><a href="/servlet/ScheduleFlightForm">Schedule Flight</a></li>
+<li><a href="/servlet/SchedulePassengerForm">Schedule Passenger</a></li>
 </ul>
 </li>
 <li>
 Queries
+<ul>
+<li><a href="/servlet/FindFlightsForm">Find Flights by Airline</a></li>
+<li><a href="/servlet/GetPassengersForm">Find Passengers on Scheduled Flight</a></li>
+<li><a href="/query/Status.html">Find Flight Status By Time</a></li>
+<li><a href="/query/ToFrom.html">Find Flights To/From a Place</a></li>
+<li><a href="/servlet/BaggageForm">Find Baggage for Person on Flight</a></li>
+</ul>
 </li>
 </ul>
 </body>
