--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,6 +27,12 @@ Queries
 <li><a href="/servlet/BaggageForm">Find Baggage for Person on Flight</a></li>
 </ul>
 </li>
+<li>
+Deletion
+<ul>
+<li><a href="/servlet/DeleteFlightForm">Delete a Scheduled Flight</a></li>
+</ul>
+</li>
 </ul>
 </body>
 </html>
