--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,6 +15,8 @@ Insertion
 <li><a href="/insert/addPassenger.html">Passenger</a></li>
 <li><a href="/servlet/ScheduleFlightForm">Schedule Flight</a></li>
 <li><a href="/servlet/SchedulePassengerForm">Schedule Passenger</a></li>
+<li><a href="/servlet/AssociateStatusForm?type=incoming">Update Incoming Status</a></li>
+<li><a href="/servlet/AssociateStatusForm?type=outgoing">Update Outgoing Status</a></li>
 </ul>
 </li>
 <li>
