Fix format hint

--- a/src/html/query/Status.html
+++ b/src/html/query/Status.html
@@ -4,7 +4,7 @@
 </head>
 <h1> Find flight status around time</h1>
 <form method="GET" action="http://localhost:8085/servlet/Status">
-Time (ex. 13:42, 04:56) <input type='text' name='time' />
+Time (ex. yyyy/mm/dd HH:MM) <input type='text' name='time' />
 <br />
 <input type='Submit' value='Find Flights' />
 </form>
